Fix overflow on Mobile and loader on Request

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,10 @@ body {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: normal;
+}
+
+div#root {
+    position: relative;
     overflow-x: hidden;
 }
 
@@ -93,6 +97,37 @@ hr {
     color: #ffffff;
     border-radius: 40px;
     border: 3px solid #ffffff;
+}
+
+.loader {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+}
+
+.loader::after {
+    content: "";
+    display: block;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    border: 4px solid var(--accent-color);
+    border-color: var(--accent-color) transparent var(--accent-color)
+        transparent;
+    animation: loading 1s linear infinite;
+}
+
+.loader.light::after {
+    border-color: #ffffff transparent #ffffff;
+}
+
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 header {
